[package]
name = "lattice-sat"
version = "0.0.1"
authors = ["oreko"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap       = "2.33.1"
lll-rs     = "0.2.0"
rsmt2      = "0.10.0"
rug        = { version = "1.9.0", features = ["integer", "rand"] }
serde      = { version = "1.0.111", features = ["derive"] }
serde_json = "1.0.53"
